Alpha 12

  * New features
    * New star and planet images in system info view (#167)

  * Fixes
    * Lua model args passed as doubles to avoid loss of precision (eg time)

  * Internal changes
    * All model timing now based of game time
    * City models are now loaded at startup

Alpha 11

  * New features
    * Visual refresh: new panel graphics, UI font (Titillium Text) and model
      font (Cousine Bold) (#105, #114, #115, #138)
    * New star images in system info view (#159)
    * Manual thruster adjustments can now be made in set-speed mode (#118)
    * 5 new ground based starports (1, 2, 3, 4 landing pad configs. 
      1 Airport config) (#120)
    * Major upgrade to coriolis station model (#158)
    * Clicking on the hyperspace icon a second time after a hyperspace is
      initiated cancels the jump (#25)
    * Screenshots are now in PNG format (#91, #140)

  * Fixes
    * Orbital stations create a small amount of population (#85, #96)
    * Terrain colour changes based on temperature now works properly (makes
      Earth look correct again)
    * Crash when using an illegal goods trader that is a police front (#88)
    * Crash when restoring bulleting board ads after loading a game (#86)
    * Crash in AI collision detection in ternary systems
    * Discovery Base (Sol) orbit too close to its parent (#116)
    * Don't create illegal goods traders in systems with no illegal goods (#109)
    * Better layout for hyperdrive ranges in ship purchase screen (#94)
    * Use power-of-two texture for facegen to support more graphics cards (#83)
    * Remove duplicate system 'EI Cancri' [2,0]
    * Crash on call to Lua method Player.AddCrime
    * Crash on any mission failure (#144)
	* Mission status screen layout tweaks (#145)

  * Internal changes
    * Lots of code cleanups, warnings silenced, etc
    * Fonts rendering controlled by per-font config files (#106, #113)
    * Background stars & Milky Way use a VBO (#164)